--- a/kaggle_solution.ipynb
+++ b/kaggle_solution.ipynb
@@ -4,7 +4,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "# Fixing Broken BERT Embeddings\n",
+                "# Fixing Broken BERT Embeddings (Fixed Padding)\n",
                 "\n",
                 "This notebook focuses on restoring a BERT model whose word embeddings have been corrupted. \n",
                 "We use the following strategy:\n",
@@ -131,6 +131,7 @@
                 "            item['labels'] = torch.tensor(self.labels[idx])\n",
                 "        return item\n",
                 "    def __len__(self):\n",
+                "        # Check length of any key\n",
                 "        return len(self.encodings['input_ids'])\n",
                 "\n",
                 "# Predefined mapping from baseline\n",
@@ -181,7 +182,8 @@
                 "val_texts = df_val[\"text\"].tolist()\n",
                 "val_labels = df_val[\"labels\"].map(LABEL_MAP).tolist()\n",
                 "\n",
-                "val_encodings = tokenizer(val_texts, truncation=True, padding=True, max_length=MAX_LEN)\n",
+                "# CRITICAL: Use padding='max_length' to ensure consistent sizes when combining datasets\n",
+                "val_encodings = tokenizer(val_texts, truncation=True, padding='max_length', max_length=MAX_LEN)\n",
                 "val_dataset = SentimentDataset(val_encodings, val_labels)\n",
                 "val_loader = DataLoader(val_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
                 "\n",
@@ -206,7 +208,8 @@
             "source": [
                 "model.eval()\n",
                 "test_texts = df_test[\"text\"].tolist()\n",
-                "test_encodings = tokenizer(test_texts, truncation=True, padding=True, max_length=MAX_LEN)\n",
+                "# CRITICAL: Use padding='max_length' here too\n",
+                "test_encodings = tokenizer(test_texts, truncation=True, padding='max_length', max_length=MAX_LEN)\n",
                 "test_dataset = SentimentDataset(test_encodings)\n",
                 "test_loader = DataLoader(test_dataset, batch_size=BATCH_SIZE, shuffle=False)\n",
                 "\n",
@@ -218,8 +221,8 @@
                 "        outputs = model(input_ids, attention_mask=attention_mask)\n",
                 "        pseudo_labels.extend(torch.argmax(outputs.logits, dim=1).cpu().numpy())\n",
                 "\n",
-                "# Combine datasets\n",
-                "combined_encodings = {k: val_encodings[k] + test_encodings[k] for k in val_encodings}\n",
+                "# Combine datasets - since lengths are now fixed (MAX_LEN), this won't crash in DataLoader\n",
+                "combined_encodings = {k: val_encodings[k] + test_encodings[k] for k in val_encodings.keys()}\n",
                 "combined_labels = val_labels + pseudo_labels\n",
                 "combined_dataset = SentimentDataset(combined_encodings, combined_labels)\n",
                 "combined_loader = DataLoader(combined_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
