--- a/kaggle_solution.ipynb
+++ b/kaggle_solution.ipynb
@@ -4,17 +4,14 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "# Fixing Broken BERT Embeddings (Fixed Padding)\n",
+                "# Fixing Broken BERT Embeddings (ROBUST VERSION)\n",
                 "\n",
-                "This notebook focuses on restoring a BERT model whose word embeddings have been corrupted. \n",
-                "We use the following strategy:\n",
-                "1. **Identify and Initialize**: Identify zeroed-out embeddings and initialize them with the mean of intact embeddings.\n",
-                "2. **Freeze & Tune**: Freeze all transformer layers and refine only the `word_embeddings` matrix.\n",
-                "3. **Pseudo-labeling**: Use the validation-tuned model to label the test data and perform a second round of fine-tuning on the combined dataset.\n",
+                "**IMPORTANT**: To avoid variable collisions, please **Restart Kernel & Run All** after copying this code.\n",
                 "\n",
-                "**Restrictions**:\n",
-                "- No other transformer models.\n",
-                "- No additional data."
+                "Strategy:\n",
+                "1. **Initialize**: Fill zeros in `word_embeddings` with mean of healthy vectors.\n",
+                "2. **Phase 1**: Tune ONLY embeddings on `val_dataset.csv`.\n",
+                "3. **Phase 2**: Pseudo-label `test.csv`, then tune on BOTH datasets using fixed padding.\n"
             ]
         },
         {
@@ -43,7 +40,40 @@
                 "MODEL_NAME = \"Ilseyar-kfu/broken_bert\"\n",
                 "\n",
                 "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-                "print(f\"Using device: {DEVICE}\")"
+                "print(f\"Using device: {DEVICE}\")\n",
+                "\n",
+                "MAX_LEN = 128\n",
+                "BATCH_SIZE = 32\n",
+                "LABEL_MAP = {'neutral': 0, 'positive': 1, 'negative': 2}\n",
+                "INV_LABEL_MAP = {v: k for k, v in LABEL_MAP.items()}"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "### Dataset Class"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {
+                "trusted": true
+            },
+            "outputs": [],
+            "source": [
+                "class SentimentDataset(Dataset):\n",
+                "    def __init__(self, encodings, labels=None):\n",
+                "        self.encodings = {k: torch.tensor(v) for k, v in encodings.items()}\n",
+                "        self.labels = torch.tensor(labels) if labels is not None else None\n",
+                "    def __getitem__(self, idx):\n",
+                "        item = {key: val[idx] for key, val in self.encodings.items()}\n",
+                "        if self.labels is not None:\n",
+                "            item['labels'] = self.labels[idx]\n",
+                "        return item\n",
+                "    def __len__(self):\n",
+                "        return len(self.encodings['input_ids'])"
             ]
         },
         {
@@ -68,49 +98,26 @@
                 "model = AutoModelForSequenceClassification.from_pretrained(MODEL_NAME)\n",
                 "model.to(DEVICE)\n",
                 "\n",
-                "print(\"Model and Tokenizer loaded.\")"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "### Embedding Analysis and Initialization"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {
-                "trusted": true
-            },
-            "outputs": [],
-            "source": [
                 "with torch.no_grad():\n",
                 "    weights = model.bert.embeddings.word_embeddings.weight.data\n",
                 "    is_zero = (weights.pow(2).sum(dim=1) == 0)\n",
                 "    non_zero_indices = torch.where(~is_zero)[0]\n",
-                "    \n",
                 "    nz_mean = weights[non_zero_indices].mean(dim=0)\n",
                 "    nz_std = weights[non_zero_indices].std()\n",
-                "    \n",
-                "    print(f\"Total tokens: {len(weights)}\")\n",
-                "    print(f\"Corrupted tokens: {is_zero.sum().item()}\")\n",
-                "    \n",
-                "    # Initialize corrupted ones with mean + light noise\n",
                 "    weights[is_zero] = nz_mean + torch.randn_like(weights[is_zero]) * nz_std * 0.1\n",
                 "\n",
-                "# Freeze everything but the embeddings\n",
                 "for param in model.parameters():\n",
                 "    param.requires_grad = False\n",
-                "model.bert.embeddings.word_embeddings.weight.requires_grad = True"
+                "model.bert.embeddings.word_embeddings.weight.requires_grad = True\n",
+                "\n",
+                "print(\"Model prepared and embeddings initialized.\")"
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "### Training Setup"
+                "### Phase 1: Training on Validation"
             ]
         },
         {
@@ -121,74 +128,28 @@
             },
             "outputs": [],
             "source": [
-                "class SentimentDataset(Dataset):\n",
-                "    def __init__(self, encodings, labels=None):\n",
-                "        self.encodings = encodings\n",
-                "        self.labels = labels\n",
-                "    def __getitem__(self, idx):\n",
-                "        item = {key: torch.tensor(val[idx]) for key, val in self.encodings.items()}\n",
-                "        if self.labels is not None:\n",
-                "            item['labels'] = torch.tensor(self.labels[idx])\n",
-                "        return item\n",
-                "    def __len__(self):\n",
-                "        # Check length of any key\n",
-                "        return len(self.encodings['input_ids'])\n",
-                "\n",
-                "# Predefined mapping from baseline\n",
-                "LABEL_MAP = {'neutral': 0, 'positive': 1, 'negative': 2}\n",
-                "INV_LABEL_MAP = {v: k for k, v in LABEL_MAP.items()}\n",
-                "\n",
-                "def train_model(model, loader, epochs, lr, warmup_steps=0):\n",
-                "    optimizer = AdamW(model.bert.embeddings.word_embeddings.parameters(), lr=lr)\n",
-                "    total_steps = len(loader) * epochs\n",
-                "    scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps=warmup_steps, num_training_steps=total_steps)\n",
-                "    \n",
-                "    model.train()\n",
-                "    for epoch in range(epochs):\n",
-                "        total_loss = 0\n",
-                "        for batch in tqdm.tqdm(loader, desc=f\"Epoch {epoch+1}/{epochs}\"):\n",
-                "            optimizer.zero_grad()\n",
-                "            input_ids = batch['input_ids'].to(DEVICE)\n",
-                "            attention_mask = batch['attention_mask'].to(DEVICE)\n",
-                "            labels = batch['labels'].to(DEVICE)\n",
-                "            \n",
-                "            outputs = model(input_ids, attention_mask=attention_mask, labels=labels)\n",
-                "            loss = outputs.loss\n",
-                "            loss.backward()\n",
-                "            optimizer.step()\n",
-                "            scheduler.step()\n",
-                "            total_loss += loss.item()\n",
-                "        print(f\"Average Loss: {total_loss / len(loader):.4f}\")"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "### Phase 1: Fine-tuning on Validation Set"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {
-                "trusted": true
-            },
-            "outputs": [],
-            "source": [
-                "MAX_LEN = 128\n",
-                "BATCH_SIZE = 32\n",
-                "\n",
                 "val_texts = df_val[\"text\"].tolist()\n",
                 "val_labels = df_val[\"labels\"].map(LABEL_MAP).tolist()\n",
                 "\n",
-                "# CRITICAL: Use padding='max_length' to ensure consistent sizes when combining datasets\n",
                 "val_encodings = tokenizer(val_texts, truncation=True, padding='max_length', max_length=MAX_LEN)\n",
                 "val_dataset = SentimentDataset(val_encodings, val_labels)\n",
                 "val_loader = DataLoader(val_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
                 "\n",
-                "print(\"Starting Phase 1 Training...\")\n",
-                "train_model(model, val_loader, epochs=15, lr=5e-4, warmup_steps=100)"
+                "optimizer = AdamW(model.bert.embeddings.word_embeddings.parameters(), lr=5e-4)\n",
+                "epochs = 15\n",
+                "scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps=100, num_training_steps=len(val_loader)*epochs)\n",
+                "\n",
+                "model.train()\n",
+                "for epoch in range(epochs):\n",
+                "    for batch in tqdm.tqdm(val_loader, desc=f\"P1 Epoch {epoch+1}\"):\n",
+                "        optimizer.zero_grad()\n",
+                "        input_ids = batch['input_ids'].to(DEVICE)\n",
+                "        attention_mask = batch['attention_mask'].to(DEVICE)\n",
+                "        labels = batch['labels'].to(DEVICE)\n",
+                "        outputs = model(input_ids, attention_mask=attention_mask, labels=labels)\n",
+                "        outputs.loss.backward()\n",
+                "        optimizer.step()\n",
+                "        scheduler.step()"
             ]
         },
         {
@@ -208,7 +169,6 @@
             "source": [
                 "model.eval()\n",
                 "test_texts = df_test[\"text\"].tolist()\n",
-                "# CRITICAL: Use padding='max_length' here too\n",
                 "test_encodings = tokenizer(test_texts, truncation=True, padding='max_length', max_length=MAX_LEN)\n",
                 "test_dataset = SentimentDataset(test_encodings)\n",
                 "test_loader = DataLoader(test_dataset, batch_size=BATCH_SIZE, shuffle=False)\n",
@@ -216,57 +176,33 @@
                 "pseudo_labels = []\n",
                 "with torch.no_grad():\n",
                 "    for batch in tqdm.tqdm(test_loader, desc=\"Pseudo-labeling\"):\n",
-                "        input_ids = batch['input_ids'].to(DEVICE)\n",
-                "        attention_mask = batch['attention_mask'].to(DEVICE)\n",
-                "        outputs = model(input_ids, attention_mask=attention_mask)\n",
+                "        outputs = model(batch['input_ids'].to(DEVICE), attention_mask=batch['attention_mask'].to(DEVICE))\n",
                 "        pseudo_labels.extend(torch.argmax(outputs.logits, dim=1).cpu().numpy())\n",
                 "\n",
-                "# Combine datasets - since lengths are now fixed (MAX_LEN), this won't crash in DataLoader\n",
-                "combined_encodings = {k: val_encodings[k] + test_encodings[k] for k in val_encodings.keys()}\n",
-                "combined_labels = val_labels + pseudo_labels\n",
-                "combined_dataset = SentimentDataset(combined_encodings, combined_labels)\n",
+                "# RE-TOKENIZE EVERYTHING TO BE 100% SURE OF DIMENSIONS\n",
+                "print(\"Combining and re-tokenizing...\")\n",
+                "all_texts = val_texts + test_texts\n",
+                "all_labels = val_labels + pseudo_labels\n",
+                "\n",
+                "combined_encodings = tokenizer(all_texts, truncation=True, padding='max_length', max_length=MAX_LEN)\n",
+                "combined_dataset = SentimentDataset(combined_encodings, all_labels)\n",
                 "combined_loader = DataLoader(combined_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
                 "\n",
-                "print(\"Starting Phase 2 Combined Training...\")\n",
-                "# Use lower learning rate for combined tuning\n",
-                "train_model(model, combined_loader, epochs=5, lr=1e-4)"
+                "optimizer = AdamW(model.bert.embeddings.word_embeddings.parameters(), lr=1e-4)\n",
+                "for epoch in range(5):\n",
+                "    model.train()\n",
+                "    for batch in tqdm.tqdm(combined_loader, desc=f\"P2 Epoch {epoch+1}\"):\n",
+                "        optimizer.zero_grad()\n",
+                "        outputs = model(batch['input_ids'].to(DEVICE), attention_mask=batch['attention_mask'].to(DEVICE), labels=batch['labels'].to(DEVICE))\n",
+                "        outputs.loss.backward()\n",
+                "        optimizer.step()"
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "### Final Evaluation on Validation"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {
-                "trusted": true
-            },
-            "outputs": [],
-            "source": [
-                "model.eval()\n",
-                "val_preds = []\n",
-                "eval_loader = DataLoader(val_dataset, batch_size=BATCH_SIZE, shuffle=False)\n",
-                "with torch.no_grad():\n",
-                "    for batch in tqdm.tqdm(eval_loader, desc=\"Evaluating\"):\n",
-                "        input_ids = batch['input_ids'].to(DEVICE)\n",
-                "        attention_mask = batch['attention_mask'].to(DEVICE)\n",
-                "        outputs = model(input_ids, attention_mask=attention_mask)\n",
-                "        val_preds.extend(torch.argmax(outputs.logits, dim=1).cpu().numpy())\n",
-                "\n",
-                "val_predict_labels = [INV_LABEL_MAP[p] for p in val_preds]\n",
-                "print(\"F1 Score (Macro):\", f1_score(df_val[\"labels\"], val_predict_labels, average='macro'))\n",
-                "print(classification_report(df_val[\"labels\"], val_predict_labels))"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "### Create Submission"
+                "### Final Prediction"
             ]
         },
         {
@@ -280,22 +216,13 @@
                 "model.eval()\n",
                 "final_preds = []\n",
                 "with torch.no_grad():\n",
-                "    for batch in tqdm.tqdm(test_loader, desc=\"Final Prediction\"):\n",
-                "        input_ids = batch['input_ids'].to(DEVICE)\n",
-                "        attention_mask = batch['attention_mask'].to(DEVICE)\n",
-                "        outputs = model(input_ids, attention_mask=attention_mask)\n",
+                "    for batch in tqdm.tqdm(test_loader, desc=\"Final Pred\"):\n",
+                "        outputs = model(batch['input_ids'].to(DEVICE), attention_mask=batch['attention_mask'].to(DEVICE))\n",
                 "        final_preds.extend(torch.argmax(outputs.logits, dim=1).cpu().numpy())\n",
                 "\n",
-                "test_ans = [INV_LABEL_MAP[p] for p in final_preds]\n",
-                "submission = pd.DataFrame({\"labels\": test_ans, \"id\": df_test[\"id\"]})\n",
-                "\n",
-                "hsh = hashlib.sha256(submission.to_csv(index=False).encode('utf-8')).hexdigest()[:8]\n",
-                "submit_path = f\"submission_{hsh}.csv\"\n",
-                "submission.to_csv(submit_path, index=False)\n",
+                "submission = pd.DataFrame({\"labels\": [INV_LABEL_MAP[p] for p in final_preds], \"id\": df_test[\"id\"]})\n",
                 "submission.to_csv(\"submission.csv\", index=False)\n",
-                "\n",
-                "print(f\"Submission created: {submit_path}\")\n",
-                "print(submission.head())"
+                "print(\"Done! Output saved to submission.csv\")"
             ]
         }
     ],
