--- a/kaggle_solution.ipynb
+++ b/kaggle_solution.ipynb
@@ -4,14 +4,15 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "# Fixing Broken BERT Embeddings (ROBUST VERSION)\n",
+                "# RESTORING BROKEN BERT: ADVANCED VERSION\n",
                 "\n",
-                "**IMPORTANT**: To avoid variable collisions, please **Restart Kernel & Run All** after copying this code.\n",
+                "Strategies implemented:\n",
+                "1. **Weighted Cross-Entropy**: Penalizing neutral bias to improve recall on positive/negative.\n",
+                "2. **Confident Pseudo-labeling**: Only training on high-confidence test samples (>0.85 probability).\n",
+                "3. **Longer Embedding Recovery**: 30 epochs for initial tuning + 10 epochs for combined tuning.\n",
+                "4. **Scheduler with Warmup**: Gradual LR increase to stabilize embedding recovery.\n",
                 "\n",
-                "Strategy:\n",
-                "1. **Initialize**: Fill zeros in `word_embeddings` with mean of healthy vectors.\n",
-                "2. **Phase 1**: Tune ONLY embeddings on `val_dataset.csv`.\n",
-                "3. **Phase 2**: Pseudo-label `test.csv`, then tune on BOTH datasets using fixed padding.\n"
+                "**Note**: Restart Kernel before running."
             ]
         },
         {
@@ -25,34 +26,27 @@
                 "import torch\n",
                 "import pandas as pd\n",
                 "import numpy as np\n",
-                "import hashlib\n",
-                "from transformers import AutoTokenizer, AutoModelForSequenceClassification, get_linear_schedule_with_warmup, pipeline\n",
+                "import torch.nn.functional as F\n",
+                "from transformers import AutoTokenizer, AutoModelForSequenceClassification, get_linear_schedule_with_warmup\n",
                 "from torch.optim import AdamW\n",
                 "from torch.utils.data import DataLoader, Dataset\n",
                 "import tqdm\n",
                 "from sklearn.metrics import f1_score, classification_report\n",
                 "\n",
-                "np.random.seed(21)\n",
-                "torch.manual_seed(21)\n",
+                "np.random.seed(42)\n",
+                "torch.manual_seed(42)\n",
                 "\n",
                 "VAL_PATH = \"/kaggle/input/cyprus-ai-camp-broken-bert/val_dataset.csv\"\n",
                 "TEST_PATH = \"/kaggle/input/cyprus-ai-camp-broken-bert/test.csv\"\n",
                 "MODEL_NAME = \"Ilseyar-kfu/broken_bert\"\n",
                 "\n",
                 "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-                "print(f\"Using device: {DEVICE}\")\n",
-                "\n",
                 "MAX_LEN = 128\n",
                 "BATCH_SIZE = 32\n",
                 "LABEL_MAP = {'neutral': 0, 'positive': 1, 'negative': 2}\n",
-                "INV_LABEL_MAP = {v: k for k, v in LABEL_MAP.items()}"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "### Dataset Class"
+                "INV_LABEL_MAP = {v: k for k, v in LABEL_MAP.items()}\n",
+                "\n",
+                "print(f\"Device: {DEVICE}\")"
             ]
         },
         {
@@ -73,14 +67,24 @@
                 "            item['labels'] = self.labels[idx]\n",
                 "        return item\n",
                 "    def __len__(self):\n",
-                "        return len(self.encodings['input_ids'])"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "### Load Data and Model"
+                "        return len(self.encodings['input_ids'])\n",
+                "\n",
+                "def train_step(model, loader, optimizer, scheduler, criterion):\n",
+                "    model.train()\n",
+                "    total_loss = 0\n",
+                "    for batch in tqdm.tqdm(loader, leave=False):\n",
+                "        optimizer.zero_grad()\n",
+                "        input_ids = batch['input_ids'].to(DEVICE)\n",
+                "        attention_mask = batch['attention_mask'].to(DEVICE)\n",
+                "        labels = batch['labels'].to(DEVICE)\n",
+                "        \n",
+                "        outputs = model(input_ids, attention_mask=attention_mask)\n",
+                "        loss = criterion(outputs.logits, labels)\n",
+                "        loss.backward()\n",
+                "        optimizer.step()\n",
+                "        scheduler.step()\n",
+                "        total_loss += loss.item()\n",
+                "    return total_loss / len(loader)"
             ]
         },
         {
@@ -98,26 +102,26 @@
                 "model = AutoModelForSequenceClassification.from_pretrained(MODEL_NAME)\n",
                 "model.to(DEVICE)\n",
                 "\n",
+                "# 1. Initialize Zeros\n",
                 "with torch.no_grad():\n",
                 "    weights = model.bert.embeddings.word_embeddings.weight.data\n",
                 "    is_zero = (weights.pow(2).sum(dim=1) == 0)\n",
-                "    non_zero_indices = torch.where(~is_zero)[0]\n",
-                "    nz_mean = weights[non_zero_indices].mean(dim=0)\n",
-                "    nz_std = weights[non_zero_indices].std()\n",
+                "    nz_mean = weights[~is_zero].mean(dim=0)\n",
+                "    nz_std = weights[~is_zero].std()\n",
                 "    weights[is_zero] = nz_mean + torch.randn_like(weights[is_zero]) * nz_std * 0.1\n",
                 "\n",
                 "for param in model.parameters():\n",
                 "    param.requires_grad = False\n",
                 "model.bert.embeddings.word_embeddings.weight.requires_grad = True\n",
                 "\n",
-                "print(\"Model prepared and embeddings initialized.\")"
+                "print(f\"Corrupted tokens initialized: {is_zero.sum().item()}\")"
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "### Phase 1: Training on Validation"
+                "### Phase 1: Heavy Tuning with Class Weights"
             ]
         },
         {
@@ -135,28 +139,26 @@
                 "val_dataset = SentimentDataset(val_encodings, val_labels)\n",
                 "val_loader = DataLoader(val_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
                 "\n",
-                "optimizer = AdamW(model.bert.embeddings.word_embeddings.parameters(), lr=5e-4)\n",
-                "epochs = 15\n",
-                "scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps=100, num_training_steps=len(val_loader)*epochs)\n",
+                "# Class Weights: Increase importance of positive(1) and negative(2)\n",
+                "class_weights = torch.tensor([1.0, 2.5, 2.5]).to(DEVICE)\n",
+                "criterion = torch.nn.CrossEntropyLoss(weight=class_weights)\n",
                 "\n",
-                "model.train()\n",
+                "optimizer = AdamW(model.bert.embeddings.word_embeddings.parameters(), lr=8e-4)\n",
+                "epochs = 30\n",
+                "scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps=200, num_training_steps=len(val_loader)*epochs)\n",
+                "\n",
+                "print(\"Phase 1: Recovery Loop\")\n",
                 "for epoch in range(epochs):\n",
-                "    for batch in tqdm.tqdm(val_loader, desc=f\"P1 Epoch {epoch+1}\"):\n",
-                "        optimizer.zero_grad()\n",
-                "        input_ids = batch['input_ids'].to(DEVICE)\n",
-                "        attention_mask = batch['attention_mask'].to(DEVICE)\n",
-                "        labels = batch['labels'].to(DEVICE)\n",
-                "        outputs = model(input_ids, attention_mask=attention_mask, labels=labels)\n",
-                "        outputs.loss.backward()\n",
-                "        optimizer.step()\n",
-                "        scheduler.step()"
+                "    loss = train_step(model, val_loader, optimizer, scheduler, criterion)\n",
+                "    if (epoch + 1) % 5 == 0:\n",
+                "        print(f\"Epoch {epoch+1} Loss: {loss:.4f}\")"
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "### Phase 2: Pseudo-labeling and Combined Tuning"
+                "### Phase 2: High-Confidence Pseudo-Labeling"
             ]
         },
         {
@@ -173,36 +175,48 @@
                 "test_dataset = SentimentDataset(test_encodings)\n",
                 "test_loader = DataLoader(test_dataset, batch_size=BATCH_SIZE, shuffle=False)\n",
                 "\n",
-                "pseudo_labels = []\n",
+                "probs_list = []\n",
+                "preds_list = []\n",
+                "\n",
                 "with torch.no_grad():\n",
-                "    for batch in tqdm.tqdm(test_loader, desc=\"Pseudo-labeling\"):\n",
-                "        outputs = model(batch['input_ids'].to(DEVICE), attention_mask=batch['attention_mask'].to(DEVICE))\n",
-                "        pseudo_labels.extend(torch.argmax(outputs.logits, dim=1).cpu().numpy())\n",
+                "    for batch in tqdm.tqdm(test_loader, desc=\"Predicting Test\"):\n",
+                "        logits = model(batch['input_ids'].to(DEVICE), attention_mask=batch['attention_mask'].to(DEVICE)).logits\n",
+                "        probs = F.softmax(logits, dim=1)\n",
+                "        conf, pred = torch.max(probs, dim=1)\n",
+                "        probs_list.extend(conf.cpu().numpy())\n",
+                "        preds_list.extend(pred.cpu().numpy())\n",
                 "\n",
-                "# RE-TOKENIZE EVERYTHING TO BE 100% SURE OF DIMENSIONS\n",
-                "print(\"Combining and re-tokenizing...\")\n",
-                "all_texts = val_texts + test_texts\n",
-                "all_labels = val_labels + pseudo_labels\n",
+                "CONFIDENCE_THRESHOLD = 0.85\n",
+                "test_df_pseudo = pd.DataFrame({'text': test_texts, 'label': preds_list, 'prob': probs_list})\n",
+                "confident_test = test_df_pseudo[test_df_pseudo['prob'] >= CONFIDENCE_THRESHOLD]\n",
                 "\n",
-                "combined_encodings = tokenizer(all_texts, truncation=True, padding='max_length', max_length=MAX_LEN)\n",
-                "combined_dataset = SentimentDataset(combined_encodings, all_labels)\n",
-                "combined_loader = DataLoader(combined_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
+                "print(f\"Using {len(confident_test)} / {len(df_test)} samples from test for Phase 2\")\n",
                 "\n",
+                "# Combine data\n",
+                "p2_texts = val_texts + confident_test['text'].tolist()\n",
+                "p2_labels = val_labels + confident_test['label'].tolist()\n",
+                "\n",
+                "p2_encodings = tokenizer(p2_texts, truncation=True, padding='max_length', max_length=MAX_LEN)\n",
+                "p2_dataset = SentimentDataset(p2_encodings, p2_labels)\n",
+                "p2_loader = DataLoader(p2_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
+                "\n",
+                "# Second stage tuning (lower LR)\n",
                 "optimizer = AdamW(model.bert.embeddings.word_embeddings.parameters(), lr=1e-4)\n",
-                "for epoch in range(5):\n",
-                "    model.train()\n",
-                "    for batch in tqdm.tqdm(combined_loader, desc=f\"P2 Epoch {epoch+1}\"):\n",
-                "        optimizer.zero_grad()\n",
-                "        outputs = model(batch['input_ids'].to(DEVICE), attention_mask=batch['attention_mask'].to(DEVICE), labels=batch['labels'].to(DEVICE))\n",
-                "        outputs.loss.backward()\n",
-                "        optimizer.step()"
+                "epochs_p2 = 10\n",
+                "scheduler_p2 = get_linear_schedule_with_warmup(optimizer, num_warmup_steps=0, num_training_steps=len(p2_loader)*epochs_p2)\n",
+                "\n",
+                "print(\"Phase 2: Combined Tuning\")\n",
+                "for epoch in range(epochs_p2):\n",
+                "    loss = train_step(model, p2_loader, optimizer, scheduler_p2, criterion)\n",
+                "    if (epoch + 1) % 2 == 0:\n",
+                "        print(f\"P2 Epoch {epoch+1} Loss: {loss:.4f}\")"
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "### Final Prediction"
+                "### Final Evaluation & Submission"
             ]
         },
         {
@@ -217,12 +231,23 @@
                 "final_preds = []\n",
                 "with torch.no_grad():\n",
                 "    for batch in tqdm.tqdm(test_loader, desc=\"Final Pred\"):\n",
-                "        outputs = model(batch['input_ids'].to(DEVICE), attention_mask=batch['attention_mask'].to(DEVICE))\n",
-                "        final_preds.extend(torch.argmax(outputs.logits, dim=1).cpu().numpy())\n",
+                "        logits = model(batch['input_ids'].to(DEVICE), attention_mask=batch['attention_mask'].to(DEVICE)).logits\n",
+                "        final_preds.extend(torch.argmax(logits, dim=1).cpu().numpy())\n",
                 "\n",
                 "submission = pd.DataFrame({\"labels\": [INV_LABEL_MAP[p] for p in final_preds], \"id\": df_test[\"id\"]})\n",
                 "submission.to_csv(\"submission.csv\", index=False)\n",
-                "print(\"Done! Output saved to submission.csv\")"
+                "print(\"Submission saved!\")\n",
+                "\n",
+                "# Validation Report\n",
+                "val_preds = []\n",
+                "eval_loader = DataLoader(val_dataset, batch_size=BATCH_SIZE, shuffle=False)\n",
+                "with torch.no_grad():\n",
+                "    for batch in eval_loader:\n",
+                "        logits = model(batch['input_ids'].to(DEVICE), attention_mask=batch['attention_mask'].to(DEVICE)).logits\n",
+                "        val_preds.extend(torch.argmax(logits, dim=1).cpu().numpy())\n",
+                "\n",
+                "print(f1_score(df_val[\"labels\"], [INV_LABEL_MAP[p] for p in val_preds], average='macro'))\n",
+                "print(classification_report(df_val[\"labels\"], [INV_LABEL_MAP[p] for p in val_preds]))"
             ]
         }
     ],
